--- a/inputData/config/mvLvNoSwitches.conf
+++ b/inputData/config/mvLvNoSwitches.conf
@@ -23,90 +23,90 @@ io {
   }
   
   simbenchCodes = [
-    "1-MVLV-comm-3.403-0-no_sw",
-    "1-MVLV-comm-3.403-1-no_sw",
-    "1-MVLV-comm-3.403-2-no_sw",
-    "1-MVLV-comm-4.416-0-no_sw",
-    "1-MVLV-comm-4.416-1-no_sw",
-    "1-MVLV-comm-4.416-2-no_sw",
-    "1-MVLV-comm-5.401-0-no_sw",
-    "1-MVLV-comm-5.401-1-no_sw",
-    "1-MVLV-comm-5.401-2-no_sw",
-    "1-MVLV-rural-1.108-0-no_sw",
-    "1-MVLV-rural-1.108-1-no_sw",
-    "1-MVLV-rural-1.108-2-no_sw",
-    "1-MVLV-rural-2.107-0-no_sw",
-    "1-MVLV-rural-2.107-1-no_sw",
-    "1-MVLV-rural-2.107-2-no_sw",
-    "1-MVLV-rural-4.101-0-no_sw",
-    "1-MVLV-rural-4.101-1-no_sw",
-    "1-MVLV-rural-4.101-2-no_sw",
-    "1-MVLV-semiurb-3.202-0-no_sw",
-    "1-MVLV-semiurb-3.202-1-no_sw",
-    "1-MVLV-semiurb-3.202-2-no_sw",
-    "1-MVLV-semiurb-4.201-0-no_sw",
-    "1-MVLV-semiurb-4.201-1-no_sw",
-    "1-MVLV-semiurb-4.201-2-no_sw",
-    "1-MVLV-semiurb-5.220-0-no_sw",
-    "1-MVLV-semiurb-5.220-1-no_sw",
-    "1-MVLV-semiurb-5.220-2-no_sw",
-    "1-MVLV-urban-5.303-0-no_sw",
-    "1-MVLV-urban-5.303-1-no_sw",
-    "1-MVLV-urban-5.303-2-no_sw",
-    "1-MVLV-urban-6.305-0-no_sw",
-    "1-MVLV-urban-6.305-1-no_sw",
-    "1-MVLV-urban-6.305-2-no_sw",
-    "1-MVLV-urban-6.309-0-no_sw",
-    "1-MVLV-urban-6.309-1-no_sw",
-    "1-MVLV-urban-6.309-2-no_sw",
-    "1-LV-rural1--0-no_sw",
-    "1-LV-rural1--1-no_sw",
-    "1-LV-rural1--2-no_sw",
-    "1-LV-rural2--0-no_sw",
-    "1-LV-rural2--1-no_sw",
-    "1-LV-rural2--2-no_sw",
-    "1-LV-rural3--0-no_sw",
-    "1-LV-rural3--1-no_sw",
-    "1-LV-rural3--2-no_sw",
-    "1-LV-semiurb4--0-no_sw",
-    "1-LV-semiurb4--1-no_sw",
-    "1-LV-semiurb4--2-no_sw",
-    "1-LV-semiurb5--0-no_sw",
-    "1-LV-semiurb5--1-no_sw",
-    "1-LV-semiurb5--2-no_sw",
-    "1-LV-urban6--0-no_sw",
-    "1-LV-urban6--1-no_sw",
-    "1-LV-urban6--2-no_sw",
+//    "1-MVLV-comm-3.403-0-no_sw",
+//    "1-MVLV-comm-3.403-1-no_sw",
+//    "1-MVLV-comm-3.403-2-no_sw",
+//    "1-MVLV-comm-4.416-0-no_sw",
+//    "1-MVLV-comm-4.416-1-no_sw",
+//    "1-MVLV-comm-4.416-2-no_sw",
+//    "1-MVLV-comm-5.401-0-no_sw",
+//    "1-MVLV-comm-5.401-1-no_sw",
+//    "1-MVLV-comm-5.401-2-no_sw",
+//    "1-MVLV-rural-1.108-0-no_sw",
+//    "1-MVLV-rural-1.108-1-no_sw",
+//    "1-MVLV-rural-1.108-2-no_sw",
+//    "1-MVLV-rural-2.107-0-no_sw",
+//    "1-MVLV-rural-2.107-1-no_sw",
+//    "1-MVLV-rural-2.107-2-no_sw",
+//    "1-MVLV-rural-4.101-0-no_sw",
+//    "1-MVLV-rural-4.101-1-no_sw",
+//    "1-MVLV-rural-4.101-2-no_sw",
+//    "1-MVLV-semiurb-3.202-0-no_sw",
+//    "1-MVLV-semiurb-3.202-1-no_sw",
+//    "1-MVLV-semiurb-3.202-2-no_sw",
+//    "1-MVLV-semiurb-4.201-0-no_sw",
+//    "1-MVLV-semiurb-4.201-1-no_sw",
+//    "1-MVLV-semiurb-4.201-2-no_sw",
+//    "1-MVLV-semiurb-5.220-0-no_sw",
+//    "1-MVLV-semiurb-5.220-1-no_sw",
+//    "1-MVLV-semiurb-5.220-2-no_sw",
+//    "1-MVLV-urban-5.303-0-no_sw",
+//    "1-MVLV-urban-5.303-1-no_sw",
+//    "1-MVLV-urban-5.303-2-no_sw",
+//    "1-MVLV-urban-6.305-0-no_sw",
+//    "1-MVLV-urban-6.305-1-no_sw",
+//    "1-MVLV-urban-6.305-2-no_sw",
+//    "1-MVLV-urban-6.309-0-no_sw",
+//    "1-MVLV-urban-6.309-1-no_sw",
+//    "1-MVLV-urban-6.309-2-no_sw",
+//    "1-LV-rural1--0-no_sw",
+//    "1-LV-rural1--1-no_sw",
+//    "1-LV-rural1--2-no_sw",
+//    "1-LV-rural2--0-no_sw",
+//    "1-LV-rural2--1-no_sw",
+//    "1-LV-rural2--2-no_sw",
+//    "1-LV-rural3--0-no_sw",
+//    "1-LV-rural3--1-no_sw",
+//    "1-LV-rural3--2-no_sw",
+//    "1-LV-semiurb4--0-no_sw",
+//    "1-LV-semiurb4--1-no_sw",
+//    "1-LV-semiurb4--2-no_sw",
+//    "1-LV-semiurb5--0-no_sw",
+//    "1-LV-semiurb5--1-no_sw",
+//    "1-LV-semiurb5--2-no_sw",
+//    "1-LV-urban6--0-no_sw",
+//    "1-LV-urban6--1-no_sw",
+//    "1-LV-urban6--2-no_sw",
 //    "1-MV-comm--0-no_sw",
-    "1-MV-comm--1-no_sw",
-    "1-MV-comm--2-no_sw",
-    "1-MV-rural--0-no_sw",
-    "1-MV-rural--1-no_sw",
-    "1-MV-rural--2-no_sw",
-    "1-MV-semiurb--0-no_sw",
-    "1-MV-semiurb--1-no_sw",
-    "1-MV-semiurb--2-no_sw",
-    "1-MV-urban--0-no_sw",
-    "1-MV-urban--1-no_sw",
-    "1-MV-urban--2-no_sw",
+//    "1-MV-comm--1-no_sw",
+//    "1-MV-comm--2-no_sw",
+//    "1-MV-rural--0-no_sw",
+//    "1-MV-rural--1-no_sw",
+//    "1-MV-rural--2-no_sw",
+//    "1-MV-semiurb--0-no_sw",
+//    "1-MV-semiurb--1-no_sw",
+//    "1-MV-semiurb--2-no_sw",
+//    "1-MV-urban--0-no_sw",
+//    "1-MV-urban--1-no_sw",
+//    "1-MV-urban--2-no_sw",
     # Causing memory issues
-    #"1-MVLV-comm-all-0-no_sw",
-    #"1-MVLV-comm-all-1-no_sw",
-    #"1-MVLV-comm-all-2-no_sw",
-    #"1-MVLV-rural-all-0-no_sw",
-    #"1-MVLV-rural-all-1-no_sw",
-    #"1-MVLV-rural-all-2-no_sw",
-    #"1-MVLV-semiurb-all-0-no_sw",
-    #"1-MVLV-semiurb-all-1-no_sw",
-    #"1-MVLV-semiurb-all-2-no_sw",
-    #"1-MVLV-urban-all-0-no_sw",
-    #"1-MVLV-urban-all-1-no_sw",
-    #"1-MVLV-urban-all-2-no_sw",
+    "1-MVLV-comm-all-0-no_sw",
+    "1-MVLV-comm-all-1-no_sw",
+    "1-MVLV-comm-all-2-no_sw",
+    "1-MVLV-rural-all-0-no_sw",
+    "1-MVLV-rural-all-1-no_sw",
+    "1-MVLV-rural-all-2-no_sw",
+    "1-MVLV-semiurb-all-0-no_sw",
+    "1-MVLV-semiurb-all-1-no_sw",
+    "1-MVLV-semiurb-all-2-no_sw",
+    "1-MVLV-urban-all-0-no_sw",
+    "1-MVLV-urban-all-1-no_sw",
+    "1-MVLV-urban-all-2-no_sw"
   ]
 }
 
 conversion {
   removeSwitches = true
-  participantWorkersPerType = 20
-  createTimeSeries = true
+  participantWorkersPerType = 60
+  createTimeSeries = false
 }
