--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ repositories {
 
 dependencies {
 	/* PowerSystemDataModel */
-	implementation('com.github.ie3-institute:PowerSystemDataModel:3.0-SNAPSHOT') {
+	implementation('com.github.ie3-institute:PowerSystemDataModel:3.0.0') {
 		exclude group: 'org.apache.logging.log4j'
 		exclude group: 'org.slf4j'
 		/* Exclude our own nested dependencies */
@@ -98,7 +98,7 @@ dependencies {
 }
 
 wrapper {
-	gradleVersion = '7.5.1'
+	gradleVersion = '7.6'
 }
 
 tasks.withType(JavaCompile) {
